# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.18)
project(nanousd_python VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
find_package(nanobind CONFIG REQUIRED)
include(FetchContent)

set(NANOUSD_DIR "" CACHE PATH "nanousd source tree or install prefix")
set(NANOUSD_FETCH_REPOSITORY "https://github.com/NVIDIA-Omniverse/nanousd.git" CACHE STRING
    "nanousd repository to fetch when nanousd is not otherwise discoverable")
set(NANOUSD_FETCH_TAG "0ed2f03ccce4b609bdb5146b594b2db36d0af232" CACHE STRING
    "nanousd git commit/tag to fetch when nanousd is not otherwise discoverable")
if(NOT NANOUSD_DIR AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../nanousd/CMakeLists.txt")
    set(NANOUSD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../nanousd")
endif()

set(_nanousd_source_build OFF)
function(_nanousd_use_source source_dir)
    set(NANOUSD_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(NANOUSD_SHARED_API ON CACHE BOOL "" FORCE)
    add_subdirectory("${source_dir}" "${CMAKE_BINARY_DIR}/nanousd-core" EXCLUDE_FROM_ALL)
    set(_nanousd_api_target nanousdapi PARENT_SCOPE)
    set(_nanousd_source_build ON PARENT_SCOPE)
endfunction()

if(NANOUSD_DIR AND EXISTS "${NANOUSD_DIR}/CMakeLists.txt")
    _nanousd_use_source("${NANOUSD_DIR}")
elseif(NANOUSD_DIR)
    find_path(NANOUSD_INCLUDE_DIR nanousd/nanousdapi.h
        PATHS "${NANOUSD_DIR}/include")
    find_library(NANOUSD_API_LIBRARY nanousdapi
        PATHS "${NANOUSD_DIR}/lib" "${NANOUSD_DIR}/build" "${NANOUSD_DIR}/build/Release")
    if(NOT NANOUSD_INCLUDE_DIR OR NOT NANOUSD_API_LIBRARY)
        message(FATAL_ERROR "Could not find nanousd headers/library under NANOUSD_DIR=${NANOUSD_DIR}")
    endif()
    add_library(nanousdapi_imported SHARED IMPORTED)
    set_target_properties(nanousdapi_imported PROPERTIES
        IMPORTED_LOCATION "${NANOUSD_API_LIBRARY}"
        INTERFACE_INCLUDE_DIRECTORIES "${NANOUSD_INCLUDE_DIR}")
    set(_nanousd_api_target nanousdapi_imported)
else()
    find_package(nanousd CONFIG QUIET)
    if(nanousd_FOUND)
        set(_nanousd_api_target nanousd::nanousdapi)
    else()
        FetchContent_Declare(nanousd
            GIT_REPOSITORY "${NANOUSD_FETCH_REPOSITORY}"
            GIT_TAG "${NANOUSD_FETCH_TAG}"
            GIT_SHALLOW FALSE)
        FetchContent_Populate(nanousd)
        _nanousd_use_source("${nanousd_SOURCE_DIR}")
    endif()
endif()

nanobind_add_module(_nanousd NB_STATIC src/bindings.cpp)
target_link_libraries(_nanousd PRIVATE "${_nanousd_api_target}")

set(_nanousd_python_install_rpath "$ORIGIN")
if(APPLE)
    set(_nanousd_python_install_rpath "@loader_path")
endif()

if(_nanousd_source_build)
    add_dependencies(_nanousd nanousd nanousdapi)
    set_target_properties(_nanousd PROPERTIES
        BUILD_RPATH "$<TARGET_FILE_DIR:nanousdapi>;$<TARGET_FILE_DIR:nanousd>"
        INSTALL_RPATH "${_nanousd_python_install_rpath}")
    install(TARGETS nanousd nanousdapi
        LIBRARY DESTINATION nanousd
        RUNTIME DESTINATION nanousd)
else()
    set_target_properties(_nanousd PROPERTIES
        INSTALL_RPATH "${_nanousd_python_install_rpath}")
endif()

install(TARGETS _nanousd LIBRARY DESTINATION nanousd)
install(DIRECTORY src/nanousd/ DESTINATION nanousd
    FILES_MATCHING PATTERN "*.py")
install(DIRECTORY src/pxr/ DESTINATION pxr
    FILES_MATCHING PATTERN "*.py")

# Single canonical libnanousd backend (single-inode ODR fix). When this package is
# built in a workspace that ALSO builds the renderers, record the canonical renderer
# core path. nanousd/__init__.py defaults NANOUSD_BACKEND to it at import time so the
# pxr_compat shim and the renderers dlopen ONE libnanousd inode instead of two
# colliding instances (the dual-core collision silently makes the Vulkan viewer render
# 0 meshes). nanousdapi reads NANOUSD_BACKEND before its own search (src/nanousdapi.cpp
# LoadBackend). Skipped for standalone wheels (no workspace core) -> the bundled core
# is used exactly as before. Applies to ALL install paths (bare `pip install`, build.sh).
set(_nanousd_canonical_core "")
foreach(_d "${NANOUSD_DIR}/build/Release" "${NANOUSD_DIR}/build/Debug" "${NANOUSD_DIR}/build")
    if(NOT _nanousd_canonical_core AND EXISTS "${_d}/libnanousd.so.0")
        file(GLOB _cc "${_d}/libnanousd.so.*.*.*")
        if(_cc)
            list(GET _cc 0 _nanousd_canonical_core)
        endif()
    endif()
endforeach()
if(_nanousd_canonical_core)
    file(WRITE "${CMAKE_BINARY_DIR}/_backend_path.py"
        "# Generated by nanousd-python CMake: canonical libnanousd core for single-inode NANOUSD_BACKEND.\nCANONICAL_BACKEND = r\"${_nanousd_canonical_core}\"\n")
    install(FILES "${CMAKE_BINARY_DIR}/_backend_path.py" DESTINATION nanousd)
    message(STATUS "nanousd-python: NANOUSD_BACKEND default -> ${_nanousd_canonical_core} (single-inode ODR fix)")
endif()
