[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nanousd-python"
version = "0.1.0"
description = "Python bindings and pxr compatibility shim for nanousd"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["numpy"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []
